--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@types/expect-puppeteer": "^4.4.5",
     "chai": "^4.3.4",
+    "cross-env": "^7.0.3",
     "puppeteer": "^8.0.0",
     "tslib": "^2.1.0"
   },
